# majsoul-hook-mitm

./: .gitignore  README.cn.md  README.md  fetch-pb.py  main.py  main.spec  mhm-addons.py  mhm-console.cmd  mhm-console.py  mhm.cmd  mhmp  mhmp.spec  parse.py  pyproject.toml  requirements.txt  richi-addons.py  richi-console.int  richi-console.py  run.bat
.github/workflows/: build.yml  release.yml
conf/: settings.json
mhm/: __init__.py  __main__.py  addon.py  addons.py  common.py  config.py  main.py  protocol.py  resource.py  tui.py
mhm/hook/: __init__.py  aider.py  chest.py  skins.py
mhm/plugin/: aider.py  chest.py  skin.py
mhm/proto/: __init__.py  config_pb2.py  sheets_pb2.py
richi/: addons.py  config.py  liqi.py  main.py
richi/plugin/: aider.py  chest.py  skin.py
richi/proto/: liqi.py
src/: addons.py  aider.py  chest.py  config.py  hack.py  liqi.py  lq.json  lq.proto  lq.py  main.py  richi.py  skin.py
src/proto/: liqi.json  liqi.proto  liqi_pb2.py
